--- a/index.html
+++ b/index.html
@@ -1,44 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    body {
-      background-color: #D5E1EF;
-      font-family: Outfit;
-    }
-    div{
-      background-color: white;
-      align-content: center;
-      width: 320;
-      height: 497;
-      border-radius: 10%;
-    }
-    h1{
-      color: #1F314F;
-      font-size: 22px;
-      
-    }
-    h2 {
-      color: #7D889E;
-    }
-  </style>
-</head>
-<body>
+    <title>QR code component</title>
 
-<div>
-  <img src="images/image-qr-code.png" width="288" height="288">
-  <h1>Improve your front-end skills by building projects</h1>
-  <h2>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
-</div>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      body {
+        background-color: #d5e1ef;
+        font-family: Outfit;
+      }
+      .parent {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: flex-end;
+      }
 
-
-</body>
+      .container {
+        background-color: white;
+        width: 320px;
+        height: 497px;
+        border-radius: 10%;
+        position: absolute;
+        inset: 0;
+        margin: auto;
+      }
+      h1 {
+        color: #1f314f;
+        font-size: 22px;
+        font-weight: bold;
+        width: 288px;
+        text-align: center;
+        margin-top: 0px;
+        margin-bottom: 8px;
+        margin-left: 16px;
+        margin-right: 16px;
+      }
+      h2 {
+        color: #7d889e;
+        font-size: 15px;
+        width: 256px;
+        text-align: center;
+        margin-top: 8px;
+        margin-bottom: 0px;
+        margin-left: 16px;
+        margin-right: 16px;
+      }
+      img {
+        margin: 16px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <img src="images/image-qr-code.png" width="288" height="288" />
+      </div>
+      <div class="parent">
+        <h1>Improve your front-end skills by building projects</h1>
+        <h2>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </h2>
+      </div>
+    </div>
+  </body>
 </html>
