--- a/index.html
+++ b/index.html
@@ -27,15 +27,19 @@
         justify-content: center;
         align-items: flex-end;
       }
-
+      section{
+        width: 320px;
+        height: 497px;
+        position: absolute;
+        inset: 0;
+        margin: auto;
+      }
       .container {
         background-color: white;
         width: 320px;
         height: 497px;
         border-radius: 10%;
-        position: absolute;
-        inset: 0;
-        margin: auto;
+       
       }
       h1 {
         color: #1f314f;
@@ -64,9 +68,10 @@
     </style>
   </head>
   <body>
+    <section>
     <div class="container">
       <div>
-        <img src="images/image-qr-code.png" width="288" height="288" />
+        <img src="images/image-qr-code.png" width="288" height="288" alt="Image QR"/>
       </div>
       <div class="parent">
         <h1>Improve your front-end skills by building projects</h1>
@@ -76,5 +81,6 @@
         </h2>
       </div>
     </div>
+  </section>
   </body>
 </html>
